project1/test/test_11711310_3.out
Error type B at Line 8: Missing closing curly bracket '}'
