project1/test/test_11711310_3.spl
float foo()
{
  float f = 1.00000;
  f = f + 1;
  return f;


